--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
+  "proxy": "http://localhost:4000",
+
   "keywords": [],
   "author": "",
   "license": "ISC",
