--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,12 +8,12 @@
     "start": "nodemon index.js"
   },
   "proxy": "http://localhost:4000",
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20"
